--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,9 @@ button {
     margin-bottom: 10px;
     border-radius: 15%;
 }
+/* .card:hover {
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+} */
 
 .cardImg {
     margin-top: 10px;
@@ -58,15 +61,39 @@ button {
     justify-self: center;
     font-size: larger;
 }
+.botonAgregar:hover {
+    justify-self: center;
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
 
 .buttonConocer {
     display: flex;
+    justify-content: center;
+}
+.buttonConocer:hover {
+    display: flex;
+    font-size: xx-large;
     justify-content: center;
 }
 /* INDEX FIN*/
 /* DETALLE.HTML */
 
 .ingredientes_instrucciones {
+    color: white;
     display: flex;
     justify-content: space-around;
 }
@@ -82,61 +109,34 @@ button {
 }
 
 .h1Detalle {
+    color: white;
     justify-self: center;
 }
-.h3Detalle {justify-self:center;}
+.h3Detalle {justify-self:center; color: white;}
 .ingredientes h3, .categorias h3, .instrucciones h3{align-self: center;
 
 }
 /* DETALLE.HTML FIN */
 
-/* Login */
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: 0;
-}
 
 .body_login{
     background-color: #aeb7b3;
-    height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.log{
-    padding: 20px;
-    border-radius: 10px;
-    width: 100%;
-    max-width: 400px;
 }
 
 .sesion_login{
-    font-size: 25px;
-    font-weight: bold;
     text-align: center;
-    margin-bottom: 20px;
+    justify-content: center;
 
 }
 
-
-form label{
-    font-size: 15px;
-    font-weight: bold;
-    display: block;
-    margin-bottom: 10px;
-}
-
-fomr input{
+#loginfFormulario label{
+    display: flex;
     width: 100%;
-    padding:10px;
-    margin-bottom: 20px;
-    border: 1px, solid black;
-    border-radius: 5px;
-    font-size: 15px;
-    
+    justify-content: center;
 }
 
-/* Login */
+
+#loginfFormulario {
+    justify-content: center;
+}
