--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ button {
     color: white;
 }
 
-.card_article {
+.card_article, .categoryBody {
     color: #e1efe6;
     display: flex;
     flex-wrap: wrap;
@@ -64,6 +64,10 @@ button {
     padding: 5px;
 }
 
+.card:hover {
+    box-shadow: 5px 5px 5px 5px black;
+
+}
 
 .cardImg {
     margin-top: 10px;
@@ -150,47 +154,18 @@ button {
     justify-content: center;
 }
 
-@media(max-width:480px) {
-
-
-    .card {
-        width: 90%;
-        border: 3px solid;
-    }
-
-    .ul_nav {
-        display: none;
-        justify-content: center;
-    }
-
-    .card_article {
-        width: 100%;
-        justify-content: center;
-    }
-}
-
-.cardImg {
-    width: 70%;
-}
-
 /* INDEX FIN*/
+
 /* DETALLE.HTML */
 
-.ingredientes,
-.instrucciones {
+.ingredientes_instrucciones {
     color: white;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
 }
-
-.ulIngredientes, .ulPasos{
-    width: 60%;
-    align-self: center;
-}
-
 
 .detalle_img {
-    width: 70%;
+    width: 30%;
     border-radius: 10%;
 }
 
@@ -212,12 +187,9 @@ button {
 .ingredientes h3,
 .categorias h3,
 .instrucciones h3 {
-    justify-self: center;
-    color: white;
     align-self: center;
 }
-
-.detalle_category {
+.detalle_category{
     display: flex;
     border-radius: 10%;
     background-color: white;
@@ -230,20 +202,19 @@ button {
 
 /* LOGIN */
 
-.body_login {
-    background-image: url('https://images.pexels.com/photos/326333/pexels-photo-326333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
-    /* Replace with your image path */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100%;
+.body_login{
+    background-image: url('https://images.pexels.com/photos/326333/pexels-photo-326333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Replace with your image path */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    height: 100vh; 
+    width: 100%; 
     display: flex;
-    flex-direction: column;
-    align-items: center;
+   flex-direction: column;
+   align-items:  center;
 }
 
-.log {
+.log{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -253,29 +224,29 @@ button {
     justify-content: center;
 }
 
-#loginfFormulario {
+#loginfFormulario{
     display: flex;
     flex-direction: column;
 }
 
-.sesion_login {
-
+.sesion_login{
+   
     font-size: 40px;
     color: bisque;
     font-weight: bold;
     text-align: center;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 20px;    
 }
 
-label {
+label{
     padding-top: 10px;
     font-size: 20px;
     font-weight: bold;
     color: bisque;
 }
 
-.buttonLogin {
+.buttonLogin{
     font-size: 15px;
     font-weight: bold;
     color: black;
@@ -283,30 +254,28 @@ label {
     border-radius: 5px;
     width: 15%;
     padding-top: 12px;
-    justify-content: center;
+   justify-content: center;
     width: 100%;
     margin-top: 10px;
 }
-
 /* LOGIN FIN */
 
 /* REGISTRO */
 
-.body_registro {
-    background-image: url('https://images.pexels.com/photos/326333/pexels-photo-326333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
-    /* Replace with your image path */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100%;
+.body_registro{
+    background-image: url('https://images.pexels.com/photos/326333/pexels-photo-326333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Replace with your image path */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    height: 100vh; 
+    width: 100%; 
     display: flex;
-    flex-direction: column;
-    align-items: center;
-
+   flex-direction: column;
+   align-items:  center;
+    
 }
 
-.registro {
+.registro{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -314,7 +283,7 @@ label {
     gap: 15px;
     max-width: 100%;
     padding: 20px;
-
+    
 }
 
 #registroForm {
@@ -322,17 +291,38 @@ label {
     flex-direction: column;
     font-size: 20px;
 }
-
-label {
+label{
     padding-top: 10px;
     font-size: 20px;
     font-weight: bold;
     color: bisque;
 }
 
-.rtitulo {
+.rtitulo{
     display: flex;
     color: bisque;
     justify-content: center;
     font-size: 40px;
+}
+
+/* CATEGORY */
+.h1Category{
+    color: white;
+    justify-self: center;
+}
+@media(max-width:480px){
+    
+
+    .card{
+        width: 90%;
+        border: 3px solid;
+    }
+    .ul_nav{
+        display: none;
+    }
+
+    .card_article{
+        width:100%;
+        justify-content: center;
+    }
 }
