--- a/css/styles.css
+++ b/css/styles.css
@@ -306,12 +306,36 @@ label{
 }
 
 /* CATEGORY */
-.h1Category{
+.h1Category, .h1Categories{
     color: white;
     justify-self: center;
 }
+
+.categoriesBody{
+width: 90%;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+}
+
+.detalle_categories {
+    background-color: white;
+    font-size: medium;
+    color: black;
+    margin: 10px;
+    width: 10%;
+    text-align: center;
+    border-radius: 20%;
+}
+.detalle_categories:hover {
+    box-shadow: 5px 5px 5px 5px black;
+
+}
 @media(max-width:480px){
-    
+
+    body {background-color: #160628;
+        background-size:auto;}
+    .detalle_categories{width: 40%;}
 
     .card{
         width: 90%;
