Cambios CSS header

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,10 @@ button {
 }
 
 
-
+.imgHeader{width: 100%;
+    display: flex;
+justify-content:  center;}
+.imgHeader img {width: 5%;}
 .ul_nav {
     display: flex;
     justify-content: space-around;
