--- a/css/styles.css
+++ b/css/styles.css
@@ -29,11 +29,18 @@ button {
     font-family: "Libre Franklin", sans-serif;
 }
 
+h1{text-align: center;}
 
-.imgHeader{width: 100%;
+.imgHeader {
+    width: 100%;
     display: flex;
-justify-content:  center;}
-.imgHeader img {width: 5%;}
+    justify-content: center;
+}
+
+.imgHeader img {
+    width: 5%;
+}
+
 .ul_nav {
     display: flex;
     justify-content: space-around;
@@ -46,11 +53,12 @@ justify-content:  center;}
 }
 
 .titleIndex {
-    justify-self: center;
+    text-align: center;
     color: white;
 }
 
-.card_article, .categoryBody {
+.card_article,
+.categoryBody {
     color: #e1efe6;
     display: flex;
     flex-wrap: wrap;
@@ -100,51 +108,6 @@ justify-content:  center;}
     animation-iteration-count: infinite;
 }
 
-@keyframes shake {
-    0% {
-        transform: translate(1px, 1px) rotate(0deg);
-    }
-
-    10% {
-        transform: translate(-1px, -2px) rotate(-1deg);
-    }
-
-    20% {
-        transform: translate(-3px, 0px) rotate(1deg);
-    }
-
-    30% {
-        transform: translate(3px, 2px) rotate(0deg);
-    }
-
-    40% {
-        transform: translate(1px, -1px) rotate(1deg);
-    }
-
-    50% {
-        transform: translate(-1px, 2px) rotate(-1deg);
-    }
-
-    60% {
-        transform: translate(-3px, 1px) rotate(0deg);
-    }
-
-    70% {
-        transform: translate(3px, 1px) rotate(-1deg);
-    }
-
-    80% {
-        transform: translate(-1px, -1px) rotate(1deg);
-    }
-
-    90% {
-        transform: translate(1px, 2px) rotate(0deg);
-    }
-
-    100% {
-        transform: translate(1px, -2px) rotate(-1deg);
-    }
-}
 
 .buttonConocer {
     display: flex;
@@ -192,7 +155,8 @@ justify-content:  center;}
 .instrucciones h3 {
     align-self: center;
 }
-.detalle_category{
+
+.detalle_category {
     display: flex;
     border-radius: 10%;
     background-color: white;
@@ -200,34 +164,26 @@ justify-content:  center;}
     justify-content: center;
 }
 
-@media(max-width:480px){
-    body {background-color: #160628;
-        background-size:auto;}
-    
-    .ingredientes_instrucciones{
-       flex-direction: column;
-        
-    }
-}
 
 /* DETALLE.HTML FIN */
 
 
 /* LOGIN */
 
-.body_login{
-    background-image: url('https://images.pexels.com/photos/326333/pexels-photo-326333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Replace with your image path */
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    height: 100vh; 
-    width: 100%; 
+.body_login {
+    background-image: url('https://images.pexels.com/photos/326333/pexels-photo-326333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    /* Replace with your image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
     display: flex;
-   flex-direction: column;
-   align-items:  center;
+    flex-direction: column;
+    align-items: center;
 }
 
-.log{
+.log {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -237,29 +193,29 @@ justify-content:  center;}
     justify-content: center;
 }
 
-#loginfFormulario{
+#loginfFormulario {
     display: flex;
     flex-direction: column;
 }
 
-.sesion_login{
-   
+.sesion_login {
+
     font-size: 40px;
     color: bisque;
     font-weight: bold;
     text-align: center;
     width: 100%;
-    margin-bottom: 20px;    
+    margin-bottom: 20px;
 }
 
-label{
+label {
     padding-top: 10px;
     font-size: 20px;
     font-weight: bold;
     color: bisque;
 }
 
-.buttonLogin{
+.buttonLogin {
     font-size: 15px;
     font-weight: bold;
     color: black;
@@ -267,28 +223,30 @@ label{
     border-radius: 5px;
     width: 15%;
     padding-top: 12px;
-   justify-content: center;
+    justify-content: center;
     width: 100%;
     margin-top: 10px;
 }
+
 /* LOGIN FIN */
 
 /* REGISTRO */
 
-.body_registro{
-    background-image: url('https://images.pexels.com/photos/326333/pexels-photo-326333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Replace with your image path */
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    height: 100vh; 
-    width: 100%; 
+.body_registro {
+    background-image: url('https://images.pexels.com/photos/326333/pexels-photo-326333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    /* Replace with your image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
     display: flex;
-   flex-direction: column;
-   align-items:  center;
-    
+    flex-direction: column;
+    align-items: center;
+
 }
 
-.registro{
+.registro {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -296,7 +254,7 @@ label{
     gap: 15px;
     max-width: 100%;
     padding: 20px;
-    
+
 }
 
 #registroForm {
@@ -304,14 +262,15 @@ label{
     flex-direction: column;
     font-size: 20px;
 }
-label{
+
+label {
     padding-top: 10px;
     font-size: 20px;
     font-weight: bold;
     color: bisque;
 }
 
-.rtitulo{
+.rtitulo {
     display: flex;
     color: bisque;
     justify-content: center;
@@ -319,16 +278,17 @@ label{
 }
 
 /* CATEGORY */
-.h1Category, .h1Categories{
+.h1Category,
+.h1Categories {
     color: white;
     justify-self: center;
 }
 
-.categoriesBody{
-width: 90%;
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
+.categoriesBody {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .detalle_categories {
@@ -340,26 +300,39 @@ flex-wrap: wrap;
     text-align: center;
     border-radius: 20%;
 }
+
 .detalle_categories:hover {
     box-shadow: 5px 5px 5px 5px black;
 
 }
-@media(max-width:480px){
 
-    body {background-color: #160628;
-        background-size:auto;}
-    .detalle_categories{width: 40%;}
+@media(max-width:480px) {
+   
+    .ingredientes_instrucciones {
+        flex-direction: column;
 
-    .card{
+    }
+
+    body {
+        background-color: #160628;
+        background-size: auto;
+    }
+
+    .detalle_categories {
+        width: 40%;
+    }
+
+    .card {
         width: 90%;
         border: 3px solid;
     }
-    .ul_nav{
+
+    .ul_nav {
         display: none;
     }
 
-    .card_article{
-        width:100%;
+    .card_article {
+        width: 100%;
         justify-content: center;
     }
 }
