--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ body {
 .footer {
     background-color: white;
 }
+.ul_footer{
+    display: flex;
+    justify-content: space-evenly;
+}
 
 /* INDEX */
 button {
@@ -97,9 +101,10 @@ h1 {
     border-radius: 20%;
     margin-bottom: 10px;
     background-color: #e1efe6;
-    border-radius: 10%;
+    border-radius: 5px;
     color: black;
     font-size: small;
+    padding: 1px;
 
 
 }
@@ -298,11 +303,6 @@ label {
 
     .ingredientes_instrucciones {
         flex-direction: column;
-
-    }
-
-    body {
-        background-color: black;
     }
 
     .detalle_categories {
